Chicken VM (unfinished)

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 				}
 				
 				//TODO: test chickenVM
-//				if (sourceLang === "chickenasm") {
-//					ChickenVM.readChickenAsmCode(input);
-//					ChickenVM.parseChickenAsm();
-//				}
+				if (sourceLang === "chickenasm") {
+					ChickenVM.readChickenAsmCode(input);
+					ChickenVM.parseChickenAsm();
+				}
 				
  				//instead of iterate over the array
 				document.getElementById("output").value = output.toString().split(',').join('\n');
